Fix for bug #25939; feof not working correctly for sockets. Possibly also fixes #23220; warnings issued by fgets on ssl sockets.